--- a/EV/ev.html
+++ b/EV/ev.html
@@ -138,6 +138,7 @@
                 <p>@2023 Copywrite by ClubVVIP's </p>
             </footer>
         </div>
-
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
